--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,60 @@
 .App {
   text-align: center;
 }
+.add-button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 2px solid #4caf50;
+}
+.add-button:hover {
+  background-color: #4caf50;
+  color: white;
+}
+
+.clear-button {
+  background-color: #f44336; /* Red */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  border: 2px solid #f44336;
+}
+.clear-button:hover {
+  background-color: #f44336;
+  color: white;
+}
+.add-items{
+  background-color: rgb(240, 247, 247);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+ul li {
+  background: #98c8fc;
+  color: darkblue;
+  margin: 5px;
+}
+h1{
+  background-color: rgb(189, 186, 235);
+}
